完成算法
